# ChangeLog for app-admin/eselect-wxwidgets
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-wxwidgets/ChangeLog,v 1.68 2014/03/24 15:08:39 ago Exp $

  24 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for ppc, wrt bug #502600

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for alpha, wrt bug #502600

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for ia64, wrt bug #502600

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for ppc64, wrt bug #502600

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for sparc, wrt bug #502600

  09 Mar 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  x86 stable wrt bug #502600

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> eselect-wxwidgets-20131230.ebuild:
  amd64 stable, bug #502600

  07 Mar 2014; Jeroen Roovers <jer@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  Stable for HPPA (bug #502600).

  05 Mar 2014; Markus Meier <maekke@gentoo.org>
  eselect-wxwidgets-20131230.ebuild:
  arm stable, bug #502600

*eselect-wxwidgets-20131230 (30 Dec 2013)

  30 Dec 2013; Ryan Hill <dirtyepic@gentoo.org>
  +eselect-wxwidgets-20131230.ebuild, +files/wxwin.m4-3.0:
  Version bump. Fixes bug #448074 (do not set profile to "none" if there are
  others available). Remove 2.6 suppport, add 3.0 support.

  29 May 2012; Alexis Ballier <aballier@gentoo.org>
  eselect-wxwidgets-1.4.ebuild:
  keyword ~amd64-fbsd

  22 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> -files/wxwidgets.eselect-0.8,
  -files/wx-config-1.1, -files/wxrc-1.1, -eselect-wxwidgets-1.1.ebuild,
  -eselect-wxwidgets-1.2.ebuild, -eselect-wxwidgets-1.3.ebuild,
  -files/wxwin.m4:
  Remove old.

  12 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>