@@ -1,0 +1,41 @@
+#!/bin/sh -
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-wxwidgets/files/wxrc-1.4,v 1.1 2014/04/23 19:55:10 ottxor Exp $
+#
+# /usr/bin/wxrc
+#
+#  a lame wxrc wrapper (bugs to wxwidgets@gentoo.org)
+
+EPREFIX=''
+LIBDIR="lib"
+
+_wxerror() {
+	cat >&2 <<- EOF
+		An error occurred while calling wxrc:
+
+		${1}
+
+		Please use \`eselect wxwidgets\` to select an available profile and try again.
+	EOF
+	exit 1
+}
+
+if [ -n "${WX_ECLASS_CONFIG}" ]; then
+	$(${WX_ECLASS_CONFIG} --utility=wxrc) "$@"
+	exit 0
+else
+	if [ -e "${EPREFIX}"/var/lib/wxwidgets/current ]; then
+		. "${EPREFIX}"/var/lib/wxwidgets/current
+	else
+		_wxerror "Cannot find the wxWidgets profile configuration ( ${EPREFIX}/var/lib/wxwidgets/current )"
+	fi
+
+	[ -z "${WXCONFIG}" -o "${WXCONFIG}" = none ] && _wxerror "No profile currently selected"
+
+	if [ -x "${EPREFIX}/usr/${LIBDIR}/wx/config/${WXCONFIG}" ]; then
+	   $("${EPREFIX}/usr/${LIBDIR}/wx/config/${WXCONFIG}" --utility=wxrc) "$@"
+	else
+		_wxerror "Cannot find wxWidgets profile ( ${WXCONFIG} )"
+	fi
+	exit 0
+fi
+
